--- a/p8105_hw5_ss6692.Rmd
+++ b/p8105_hw5_ss6692.Rmd
@@ -7,6 +7,7 @@ output: github_document
 
 ```{r libraries, message = FALSE}
 library(tidyverse)
+library(ggplot2)
 library (broom)
 library(rvest)
 ```
@@ -27,10 +28,12 @@ exp_df = map_df(.x = exp_files, .f=read_csv, .id = "patient_id")|>
 ```
 
 ```{r merging_datasets}
-merged_df = bind_rows(con_df, exp_df)|>
-  pivot_longer(cols = starts_with("week"), names_to = "week", values_to = "observation")|>
+
+merged_df = bind_rows(con_df, exp_df) |>
+  pivot_longer(cols = starts_with("week"), names_to = "week", values_to = "observation") |>
   mutate(
-    week = as.numeric(str_extract(week, "\\d+")))
+    week = as.numeric(str_extract(week, "\\d+"))
+  )
 ```
 #### Creating a spaghetti plot
 ```{r spaghetti_plot}
@@ -43,62 +46,68 @@ merged_df |>
         y = "Observation",
         color = "Group")
 ```
+
 ### Problem 3
-```{r setting_seed}
-set.seed(123)
-```
-
-```{r designing_elements}
-sim_power = function(n = 30, mu = 0, sigma = 5, num_datasets = 5000) 
-  {results = tibble(
-    mu_hat = numeric(num_datasets),
-    p_value = numeric(num_datasets))
-  for (i in 1:num_datasets){
-    sim_data=rnorm(n, mean = mu, sd = sigma)
-    t_result = tidy(t.test(sim_data, mu = 0))
-    results[i, "p_value"] = t_result[1, "p.value"]
-    results[i, "mu_hat"] = t_result[1, "estimate"]}
-  return(results)
+#### Setting up design elements
+First, we will calculate p values and mu hat using the provided specifications. This will be iterated 5000 times. 
+```{r sim_power}
+sim_power = function(mu) {
+  
+  data = tibble(
+    x = rnorm(n = 30, mean = mu, sd = 5)
+  )
+  
+  output = data |> 
+    t.test() |> 
+    broom::tidy() |> 
+    select(estimate, p.value) |> 
+    rename(mu_hat = estimate, p_val = p.value)
 }
-sim_results = sim_power(num_datasets = 5000, mu = c(0, 1, 2, 3, 4, 5, 6))
+
+sim_power_results = expand_grid(
+  mu_df = c(0, 1, 2, 3, 4, 5, 6), 
+  iteration = 1:50
+) |> 
+  mutate(
+    estimate = map(mu_df, sim_power)
+  ) |> 
+  unnest(estimate)
 ```
 
-```{r}
-power_results = sim_results |>
-  group_by(mu_hat) |>
-  summarise(power = mean(p_value < 0.05))
+Now, we will plot the power of the test by the true mu
+
+```{r plotting_power}
+sim_power_results |> 
+  group_by(mu_df) |> 
+  summarize(
+    reject = sum(p_val < 0.05), 
+    proportion = reject / 5000) |> 
+  ggplot(aes(x = mu_df, y = proportion)) +
+  geom_line(alpha = 0.6, linewidth = 0.9) +
+  scale_x_continuous(breaks = seq(0,6, 1)) +
+  labs(title = "Power Simulation (1:5000)")
 ```
 
-```{r}
-ggplot(power_results, aes(x = mu_hat, y = power)) +
-  geom_point() +
-  labs(title = "Power of the Test vs. True Effect Size",
-       x = "True Effect Size (μ)",
-       y = "Power") +
-  theme_minimal()
+
+```{r mu_true}
+true_mu =
+  sim_power_results |> 
+  group_by(mu_df) |> 
+  summarize(mean_mu = mean(mu_hat))
 ```
 
-```{r}
-# Assuming you have already run the simulation and stored the results in sim_results
-
-# Calculate the average estimate for each true value of μ
-average_estimate_results <- sim_results |>
-  group_by(mu_hat) |>
-  summarise(avg_estimate = mean(mu_hat))
-
-# Calculate the average estimate only for samples where the null was rejected
-avg_estimate_rejected <- sim_results |>
-  filter(p_value < 0.05) |>
-  group_by(mu_hat) |>
-  summarise(avg_estimate_rejected = mean(mu_hat))
-
-ggplot() +
-  geom_point(data = average_estimate_results, aes(x = mu_hat, y = avg_estimate), color = "blue") +
-  geom_point(data = avg_estimate_rejected, aes(x = mu_hat, y = avg_estimate_rejected), color = "red", linetype = "dashed") +
-  labs(title = "Average Estimate vs. True Effect Size",
-       x = "True Effect Size (μ)",
-       y = "Average Estimate") +
-  theme_minimal()
-
+```{r reject_mu}
+reject_mu = 
+  sim_power_results |> 
+  filter(p_val < 0.05) |> 
+  group_by(mu_df) |> 
+  summarize(mean_mu = mean(mu_hat))
 ```
 
+Now, we plot.
+
+```{r mu_plot}
+ggplot(true_mu, aes(x = mu_df, y = mean_mu)) +
+  geom_line() +
+  geom_line(data = reject_mu, color = "red") +
+  labs(title = "Comapring the True μ to Rejected μ")
