--- a/p8105_hw5_ss6692.md
+++ b/p8105_hw5_ss6692.md
@@ -1,10 +1,18 @@
 p8105_hw5_ss6692
 ================
 Sanika Sule
-2023-11-12
+2023-11-15
 
 ``` r
 library(tidyverse)
+```
+
+    ## Warning: package 'readr' was built under R version 4.3.2
+
+``` r
+library(ggplot2)
+library (broom)
+library(rvest)
 ```
 
 ### Problem 2
@@ -168,10 +176,11 @@ exp_df = map_df(.x = exp_files, .f=read_csv, .id = "patient_id")|>
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
-merged_df = bind_rows(con_df, exp_df)|>
-  pivot_longer(cols = starts_with("week"), names_to = "week", values_to = "observation")|>
+merged_df = bind_rows(con_df, exp_df) |>
+  pivot_longer(cols = starts_with("week"), names_to = "week", values_to = "observation") |>
   mutate(
-    week = as.numeric(str_extract(week, "\\d+")))
+    week = as.numeric(str_extract(week, "\\d+"))
+  )
 ```
 
 #### Creating a spaghetti plot
@@ -187,4 +196,77 @@ merged_df |>
         color = "Group")
 ```
 
-![](p8105_hw5_ss6692_files/figure-gfm/unnamed-chunk-1-1.png)<!-- -->
+![](p8105_hw5_ss6692_files/figure-gfm/spaghetti_plot-1.png)<!-- -->
+
+### Problem 3
+
+#### Setting up design elements
+
+First, we will calculate p values and mu hat using the provided
+specifications. This will be iterated 5000 times.
+
+``` r
+sim_power = function(mu) {
+  
+  data = tibble(
+    x = rnorm(n = 30, mean = mu, sd = 5)
+  )
+  
+  output = data |> 
+    t.test() |> 
+    broom::tidy() |> 
+    select(estimate, p.value) |> 
+    rename(mu_hat = estimate, p_val = p.value)
+}
+
+sim_power_results = expand_grid(
+  mu_df = c(0, 1, 2, 3, 4, 5, 6), 
+  iteration = 1:50
+) |> 
+  mutate(
+    estimate = map(mu_df, sim_power)
+  ) |> 
+  unnest(estimate)
+```
+
+Now, we will plot the power of the test by the true mu
+
+``` r
+sim_power_results |> 
+  group_by(mu_df) |> 
+  summarize(
+    reject = sum(p_val < 0.05), 
+    proportion = reject / 5000) |> 
+  ggplot(aes(x = mu_df, y = proportion)) +
+  geom_line(alpha = 0.6, linewidth = 0.9) +
+  scale_x_continuous(breaks = seq(0,6, 1)) +
+  labs(title = "Power Simulation (1:5000)")
+```
+
+![](p8105_hw5_ss6692_files/figure-gfm/plotting_power-1.png)<!-- -->
+
+``` r
+true_mu =
+  sim_power_results |> 
+  group_by(mu_df) |> 
+  summarize(mean_mu = mean(mu_hat))
+```
+
+``` r
+reject_mu = 
+  sim_power_results |> 
+  filter(p_val < 0.05) |> 
+  group_by(mu_df) |> 
+  summarize(mean_mu = mean(mu_hat))
+```
+
+Now, we plot.
+
+``` r
+ggplot(true_mu, aes(x = mu_df, y = mean_mu)) +
+  geom_line() +
+  geom_line(data = reject_mu, color = "red") +
+  labs(title = "Comapring the True μ to Rejected μ")
+```
+
+![](p8105_hw5_ss6692_files/figure-gfm/mu_plot-1.png)<!-- -->
