--- a/p8105_hw5_ss6692.md
+++ b/p8105_hw5_ss6692.md
@@ -229,7 +229,7 @@ sim_power_results = expand_grid(
   unnest(estimate)
 ```
 
-Now, we will plot the power of the test by the true mu
+Now, we will plot the power of the test by the true mu.
 
 ``` r
 sim_power_results |> 
@@ -245,12 +245,17 @@ sim_power_results |>
 
 ![](p8105_hw5_ss6692_files/figure-gfm/plotting_power-1.png)<!-- -->
 
+Now, we will calculate the true mu
+
 ``` r
 true_mu =
   sim_power_results |> 
   group_by(mu_df) |> 
   summarize(mean_mu = mean(mu_hat))
 ```
+
+Now, we will calculate the average estimate of mu in samples where the
+null was rejected
 
 ``` r
 reject_mu = 
@@ -260,13 +265,13 @@ reject_mu =
   summarize(mean_mu = mean(mu_hat))
 ```
 
-Now, we plot.
+Now, we plot the rejected mu over the true mu to compare.
 
 ``` r
 ggplot(true_mu, aes(x = mu_df, y = mean_mu)) +
   geom_line() +
-  geom_line(data = reject_mu, color = "red") +
-  labs(title = "Comapring the True μ to Rejected μ")
+  geom_line(data = reject_mu, color = "blue") +
+  labs(title = "Comparing True μ to the Rejected μ")
 ```
 
 ![](p8105_hw5_ss6692_files/figure-gfm/mu_plot-1.png)<!-- -->
