--- a/p8105_hw5_ss6692.md
+++ b/p8105_hw5_ss6692.md
@@ -17,7 +17,7 @@ library(rvest)
 
 ### Problem 2
 
-#### Merging .csv files
+##### Merging .csv files
 
 ``` r
 con_files = list.files(path = "data/con_data/", pattern = ".csv" )
@@ -183,12 +183,13 @@ merged_df = bind_rows(con_df, exp_df) |>
   )
 ```
 
-#### Creating a spaghetti plot
+##### Creating a spaghetti plot
 
 ``` r
 merged_df |>
   ggplot(aes(x=week, y=observation, group = patient_id, color = arm)) +
-  geom_point()+
+  facet_grid(~arm) +
+  geom_point() +
   geom_line() +
   labs(title = "Observations over time by study group", 
         x = "Week",
@@ -196,14 +197,14 @@ merged_df |>
         color = "Group")
 ```
 
-![](p8105_hw5_ss6692_files/figure-gfm/spaghetti_plot-1.png)<!-- -->
-
-### Problem 3
-
-#### Setting up design elements
-
-First, we will calculate p values and mu hat using the provided
-specifications. This will be iterated 5000 times.
+![](p8105_hw5_ss6692_files/figure-gfm/spaghetti_plot-1.png)<!-- --> As
+shown by the plot, the the experimental group experienced greater
+overall changes over time. In general, the observations have a positive
+change from week 1 to week nice. The control group had less variation in
+observations and the observations remained relatively stable over the 9
+weeks. \### Problem 3 \#### Setting up design elements \##### First, we
+will calculate p values and mu hat using the provided specifications.
+This will be iterated 5000 times.
 
 ``` r
 sim_power = function(mu) {
@@ -221,7 +222,7 @@ sim_power = function(mu) {
 
 sim_power_results = expand_grid(
   mu_df = c(0, 1, 2, 3, 4, 5, 6), 
-  iteration = 1:50
+  iteration = 1:5000
 ) |> 
   mutate(
     estimate = map(mu_df, sim_power)
@@ -229,7 +230,7 @@ sim_power_results = expand_grid(
   unnest(estimate)
 ```
 
-Now, we will plot the power of the test by the true mu.
+##### Now, we will plot the power of the test by the true mu.
 
 ``` r
 sim_power_results |> 
@@ -244,8 +245,9 @@ sim_power_results |>
 ```
 
 ![](p8105_hw5_ss6692_files/figure-gfm/plotting_power-1.png)<!-- -->
+Power increases as effect size increases.
 
-Now, we will calculate the true mu
+##### Now, we will calculate the true mu
 
 ``` r
 true_mu =
@@ -254,8 +256,7 @@ true_mu =
   summarize(mean_mu = mean(mu_hat))
 ```
 
-Now, we will calculate the average estimate of mu in samples where the
-null was rejected
+##### Now, we will calculate the average estimate of mu in samples where the null was rejected
 
 ``` r
 reject_mu = 
@@ -265,13 +266,17 @@ reject_mu =
   summarize(mean_mu = mean(mu_hat))
 ```
 
-Now, we plot the rejected mu over the true mu to compare.
+##### Now, we plot the rejected mu over the true mu to compare.
 
 ``` r
 ggplot(true_mu, aes(x = mu_df, y = mean_mu)) +
   geom_line() +
   geom_line(data = reject_mu, color = "blue") +
-  labs(title = "Comparing True μ to the Rejected μ")
+  labs(title = "Comparing the True μ to the Rejected μ")
 ```
 
-![](p8105_hw5_ss6692_files/figure-gfm/mu_plot-1.png)<!-- -->
+![](p8105_hw5_ss6692_files/figure-gfm/true_rej_mu-1.png)<!-- -->
+
+As the plot shows, the rejected mu reflects the true mu at around 4.
+This is likely because as effect size increases, the rejected mu is more
+representative of the true mu.
